bindings/swift/Sources/CBaseRT/include/baseRT.h


typedef void *baseRT_model_t;
baseRT_model_t baseRT_load_model(const char *model_path, const char *kernel_library_path, int max_context);
void baseRT_free_model(baseRT_model_t model);
BaseRTModelConfig baseRT_get_config(baseRT_model_t model);
size_t baseRT_model_config_sizeof(void);
size_t baseRT_model_memory(baseRT_model_t model);
const char *baseRT_get_error(void);
int baseRT_encode(baseRT_model_t model, const char *text, uint32_t *out_tokens, int max_tokens);
const char *baseRT_decode_token(baseRT_model_t model, uint32_t token_id);
typedef bool (*baseRT_token_callback)(uint32_t token_id, const char *text, void *user_data);
BaseRTGenerationStats baseRT_generate(baseRT_model_t model, const uint32_t *prompt_tokens, int n_prompt, int max_tokens,
                                      BaseRTSamplingConfig sampling, baseRT_token_callback callback, void *user_data);
int baseRT_profile_decode_step(baseRT_model_t model, uint32_t token_id, int position, float *timing_out,
                               int max_entries);
const char *baseRT_profile_label(baseRT_model_t model, int index);
void baseRT_gpu_temperature_scale(baseRT_model_t model, float temperature);
void baseRT_gpu_repetition_penalty(baseRT_model_t model, const uint32_t *token_ids, int n_tokens, float penalty);
int baseRT_tensor_count(baseRT_model_t model);
const char *baseRT_tensor_name(baseRT_model_t model, int index);
uint32_t baseRT_tensor_dtype(baseRT_model_t model, int index);
const char *baseRT_tensor_raw_dtype(baseRT_model_t model, int index);
uint32_t baseRT_prefill(baseRT_model_t model, const uint32_t *tokens, int n_tokens);
uint32_t baseRT_decode_step(baseRT_model_t model, uint32_t token_id, int position);
int baseRT_chain_decode(baseRT_model_t model, uint32_t first_token, int start_position, int count,
                        uint32_t *out_tokens);
int baseRT_get_position(baseRT_model_t model);
void baseRT_set_speculation(baseRT_model_t model, bool enabled);
void baseRT_reset(baseRT_model_t model);
BaseRTGenerationStats baseRT_generate_continue(baseRT_model_t model, const uint32_t *new_tokens, int n_new,
                                               int max_tokens, BaseRTSamplingConfig sampling,
                                               baseRT_token_callback callback, void *user_data);
int baseRT_embed(baseRT_model_t model, const uint32_t *tokens, int n_tokens, float *out_embedding, int max_dims);
int baseRT_embed_text(baseRT_model_t model, const char *text, float *out_embedding, int max_dims);
int baseRT_embedding_dim(baseRT_model_t model);
const char *baseRT_format_chat(baseRT_model_t model, const char *system_prompt, const char *user_message);
const char *baseRT_chat_template(baseRT_model_t model);
int baseRT_token_count(baseRT_model_t model, const char *text);
typedef bool (*baseRT_segment_callback)(int start_ms, int end_ms, const char *text, void *user_data);
const char *baseRT_transcribe_pcm(baseRT_model_t model, const float *samples, int n_samples,
                                  const char *language,  
                                  BaseRTTranscribeStats *stats_out);
const char *baseRT_transcribe_pcm_stream(baseRT_model_t model, const float *samples, int n_samples,
                                         const char *language, BaseRTTranscribeStats *stats_out,
                                         baseRT_segment_callback callback, void *user_data);
const char *baseRT_transcribe(baseRT_model_t model, const char *wav_path, const char *language,
                              BaseRTTranscribeStats *stats_out);
const char *baseRT_transcribe_stream(baseRT_model_t model, const char *wav_path, const char *language,
                                     BaseRTTranscribeStats *stats_out, baseRT_segment_callback callback,
                                     void *user_data);
void baseRT_set_timestamps(baseRT_model_t model, bool enabled);
bool baseRT_is_whisper(baseRT_model_t model);