include/baseRT/types.h


typedef struct {
    uint32_t dim;                     
    uint32_t n_layers;                
    uint32_t n_heads;                 
    uint32_t n_kv_heads;              
    uint32_t head_dim;                
    uint32_t q_dim;                   
    uint32_t kv_dim;                  
    uint32_t ffn_dim;                 
    uint32_t vocab_size;              
    uint32_t max_seq_len;             
    float norm_eps;                   
    float rope_theta;                 
    uint32_t sliding_window_pattern;  
    uint32_t sliding_window;          
    float rope_local_theta;           
    char architecture[32];            
    uint32_t enc_n_layers;     
    uint32_t enc_n_heads;      
    uint32_t enc_dim;          
    uint32_t enc_ffn_dim;      
    uint32_t n_mels;           
    uint32_t enc_max_seq_len;  
    uint32_t n_embd_per_layer;       
    uint32_t n_layer_kv_from_start;  
    float logit_softcap;             
    float attention_scale;           
    uint32_t head_dim_swa;           
    uint32_t head_dim_global;        
    float global_rope_partial_factor;
    uint8_t swa_layers[64];
    uint32_t ffn_dims[128];
    uint32_t n_kv_heads_per_layer[128];
    uint8_t attn_output_gate;          
    uint8_t _qwen35_pad[3];            
    float partial_rotary_factor;       
    uint32_t full_attention_interval;  
    uint8_t linear_attn_layers[64];
    uint32_t gdn_num_k_heads;     
    uint32_t gdn_num_v_heads;     
    uint32_t gdn_key_head_dim;    
    uint32_t gdn_value_head_dim;  
    uint32_t gdn_conv_kernel;     
    uint32_t n_experts;         
    uint32_t n_experts_used;    
    uint32_t n_experts_shared;  
    uint32_t expert_ffn_dim;    
    uint8_t expert_gating;      
    uint8_t norm_topk_prob;     
    uint8_t _moe_pad[2];        
    uint32_t vision_n_layers;        
    uint32_t vision_dim;             
    uint32_t vision_n_heads;         
    uint32_t vision_head_dim;        
    uint32_t vision_ffn_dim;         
    uint32_t vision_patch_size;      
    uint32_t vision_image_size;      
    uint32_t vision_pooling_kernel;  
    uint32_t vision_soft_tokens;     
    float vision_norm_eps;
    float vision_rope_theta;         
    uint32_t vision_pos_embed_size;  
    uint32_t image_token_id;         
    uint32_t boi_token_id;           
    uint32_t eoi_token_id;           
    uint32_t vision_arch;            
    uint32_t vision_spatial_merge;   
    uint32_t vision_temporal_patch;  
    uint32_t vision_out_dim;         
    uint32_t audio_n_layers;          
    uint32_t audio_dim;               
    uint32_t audio_n_heads;           
    uint32_t audio_head_dim;          
    uint32_t audio_ffn_dim;           
    uint32_t audio_output_proj_dim;   
    uint32_t audio_chunk_size;        
    uint32_t audio_left_context;      
    uint32_t audio_conv_kernel;       
    uint32_t audio_soft_tokens;       
    float audio_logit_softcap;        
    float audio_norm_eps;             
    float audio_gradient_clip;        
    float audio_residual_weight;      
    float audio_ms_per_token;         
    uint32_t audio_sscp_channels[2];  
    uint32_t audio_token_id;          
    uint32_t boa_token_id;            
    uint32_t eoa_token_id;            
    uint32_t mrope_section[3];
    uint8_t mrope_interleaved;  
    uint8_t _mrope_pad[3];      
    float rope_scaling_factor;    
    float rope_low_freq_factor;   
    float rope_high_freq_factor;  
    uint32_t rope_orig_max_pos;   
    uint32_t rope_scaling_type;
} BaseRTModelConfig;
typedef struct {
    int n_tokens;     
    float audio_ms;   
    float encode_ms;  
    float decode_ms;  
    float total_ms;   
} BaseRTTranscribeStats;
typedef struct {
    float temperature;  
    int top_k;
    float top_p;
    float min_p;
    float repeat_penalty;
    float presence_penalty;
    float frequency_penalty;
    uint32_t seed;
    int32_t n_logit_bias;
    const int32_t *logit_bias_tokens;
    const float *logit_bias_values;
} BaseRTSamplingConfig;
typedef struct {
    int prompt_tokens;
    int generated_tokens;
    float prefill_time_ms;
    float decode_time_ms;
    float prefill_tokens_per_sec;
    float decode_tokens_per_sec;
} BaseRTGenerationStats;